Analizador/Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LLAVES
    PRINTF
    RETURN

Grammar

Rule 0     S' -> program
Rule 1     program -> stmts
Rule 2     stmts_opt -> stmts
Rule 3     stmts_opt -> empty
Rule 4     stmts -> stmts stmt
Rule 5     stmts -> stmt
Rule 6     stmt -> type ID PUNTOCOMA
Rule 7     stmt -> type ID ASIGNACION expr PUNTOCOMA
Rule 8     stmt -> ID ASIGNACION expr PUNTOCOMA
Rule 9     stmt -> PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA
Rule 10    args_opt -> args_list
Rule 11    args_opt -> empty
Rule 12    args_list -> expr
Rule 13    args_list -> args_list COMA expr
Rule 14    stmt -> IF PARENTESIS condition PARENTESIS block
Rule 15    stmt -> IF PARENTESIS condition PARENTESIS block ELSE block
Rule 16    stmt -> WHILE PARENTESIS condition PARENTESIS block
Rule 17    type -> INT
Rule 18    type -> FLOAT
Rule 19    block -> PARENTESIS stmts_opt PARENTESIS
Rule 20    condition -> expr COMPARACION expr
Rule 21    expr -> expr OPERACION expr
Rule 22    expr -> PARENTESIS expr PARENTESIS
Rule 23    expr -> ID
Rule 24    expr -> NUMERO
Rule 25    expr -> DESC
Rule 26    empty -> <empty>

Terminals, with rules where they appear

ASIGNACION           : 7 8
COMA                 : 13
COMPARACION          : 20
DESC                 : 25
ELSE                 : 15
FLOAT                : 18
ID                   : 6 7 8 23
IF                   : 14 15
INT                  : 17
LLAVES               : 
NUMERO               : 24
OPERACION            : 21
PARENTESIS           : 9 9 14 14 15 15 16 16 19 19 22 22
PRINT                : 9
PRINTF               : 
PUNTOCOMA            : 6 7 8 9
RETURN               : 
WHILE                : 16
error                : 

Nonterminals, with rules where they appear

args_list            : 10 13
args_opt             : 9
block                : 14 15 15 16
condition            : 14 15 16
empty                : 3 11
expr                 : 7 8 12 13 20 20 21 21 22
program              : 0
stmt                 : 4 5
stmts                : 1 2 4
stmts_opt            : 19
type                 : 6 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmts
    (4) stmts -> . stmts stmt
    (5) stmts -> . stmt
    (6) stmt -> . type ID PUNTOCOMA
    (7) stmt -> . type ID ASIGNACION expr PUNTOCOMA
    (8) stmt -> . ID ASIGNACION expr PUNTOCOMA
    (9) stmt -> . PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA
    (14) stmt -> . IF PARENTESIS condition PARENTESIS block
    (15) stmt -> . IF PARENTESIS condition PARENTESIS block ELSE block
    (16) stmt -> . WHILE PARENTESIS condition PARENTESIS block
    (17) type -> . INT
    (18) type -> . FLOAT

    ID              shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10

    program                        shift and go to state 1
    stmts                          shift and go to state 2
    stmt                           shift and go to state 3
    type                           shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> stmts .
    (4) stmts -> stmts . stmt
    (6) stmt -> . type ID PUNTOCOMA
    (7) stmt -> . type ID ASIGNACION expr PUNTOCOMA
    (8) stmt -> . ID ASIGNACION expr PUNTOCOMA
    (9) stmt -> . PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA
    (14) stmt -> . IF PARENTESIS condition PARENTESIS block
    (15) stmt -> . IF PARENTESIS condition PARENTESIS block ELSE block
    (16) stmt -> . WHILE PARENTESIS condition PARENTESIS block
    (17) type -> . INT
    (18) type -> . FLOAT

    $end            reduce using rule 1 (program -> stmts .)
    ID              shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10

    stmt                           shift and go to state 11
    type                           shift and go to state 4

state 3

    (5) stmts -> stmt .

    ID              reduce using rule 5 (stmts -> stmt .)
    PRINT           reduce using rule 5 (stmts -> stmt .)
    IF              reduce using rule 5 (stmts -> stmt .)
    WHILE           reduce using rule 5 (stmts -> stmt .)
    INT             reduce using rule 5 (stmts -> stmt .)
    FLOAT           reduce using rule 5 (stmts -> stmt .)
    $end            reduce using rule 5 (stmts -> stmt .)
    PARENTESIS      reduce using rule 5 (stmts -> stmt .)


state 4

    (6) stmt -> type . ID PUNTOCOMA
    (7) stmt -> type . ID ASIGNACION expr PUNTOCOMA

    ID              shift and go to state 12


state 5

    (8) stmt -> ID . ASIGNACION expr PUNTOCOMA

    ASIGNACION      shift and go to state 13


state 6

    (9) stmt -> PRINT . PARENTESIS args_opt PARENTESIS PUNTOCOMA

    PARENTESIS      shift and go to state 14


state 7

    (14) stmt -> IF . PARENTESIS condition PARENTESIS block
    (15) stmt -> IF . PARENTESIS condition PARENTESIS block ELSE block

    PARENTESIS      shift and go to state 15


state 8

    (16) stmt -> WHILE . PARENTESIS condition PARENTESIS block

    PARENTESIS      shift and go to state 16


state 9

    (17) type -> INT .

    ID              reduce using rule 17 (type -> INT .)


state 10

    (18) type -> FLOAT .

    ID              reduce using rule 18 (type -> FLOAT .)


state 11

    (4) stmts -> stmts stmt .

    ID              reduce using rule 4 (stmts -> stmts stmt .)
    PRINT           reduce using rule 4 (stmts -> stmts stmt .)
    IF              reduce using rule 4 (stmts -> stmts stmt .)
    WHILE           reduce using rule 4 (stmts -> stmts stmt .)
    INT             reduce using rule 4 (stmts -> stmts stmt .)
    FLOAT           reduce using rule 4 (stmts -> stmts stmt .)
    $end            reduce using rule 4 (stmts -> stmts stmt .)
    PARENTESIS      reduce using rule 4 (stmts -> stmts stmt .)


state 12

    (6) stmt -> type ID . PUNTOCOMA
    (7) stmt -> type ID . ASIGNACION expr PUNTOCOMA

    PUNTOCOMA       shift and go to state 17
    ASIGNACION      shift and go to state 18


state 13

    (8) stmt -> ID ASIGNACION . expr PUNTOCOMA
    (21) expr -> . expr OPERACION expr
    (22) expr -> . PARENTESIS expr PARENTESIS
    (23) expr -> . ID
    (24) expr -> . NUMERO
    (25) expr -> . DESC

    PARENTESIS      shift and go to state 21
    ID              shift and go to state 19
    NUMERO          shift and go to state 22
    DESC            shift and go to state 23

    expr                           shift and go to state 20

state 14

    (9) stmt -> PRINT PARENTESIS . args_opt PARENTESIS PUNTOCOMA
    (10) args_opt -> . args_list
    (11) args_opt -> . empty
    (12) args_list -> . expr
    (13) args_list -> . args_list COMA expr
    (26) empty -> .
    (21) expr -> . expr OPERACION expr
    (22) expr -> . PARENTESIS expr PARENTESIS
    (23) expr -> . ID
    (24) expr -> . NUMERO
    (25) expr -> . DESC

  ! shift/reduce conflict for PARENTESIS resolved as shift
    PARENTESIS      shift and go to state 21
    ID              shift and go to state 19
    NUMERO          shift and go to state 22
    DESC            shift and go to state 23

  ! PARENTESIS      [ reduce using rule 26 (empty -> .) ]

    args_opt                       shift and go to state 24
    args_list                      shift and go to state 25
    empty                          shift and go to state 26
    expr                           shift and go to state 27

state 15

    (14) stmt -> IF PARENTESIS . condition PARENTESIS block
    (15) stmt -> IF PARENTESIS . condition PARENTESIS block ELSE block
    (20) condition -> . expr COMPARACION expr
    (21) expr -> . expr OPERACION expr
    (22) expr -> . PARENTESIS expr PARENTESIS
    (23) expr -> . ID
    (24) expr -> . NUMERO
    (25) expr -> . DESC

    PARENTESIS      shift and go to state 21
    ID              shift and go to state 19
    NUMERO          shift and go to state 22
    DESC            shift and go to state 23

    condition                      shift and go to state 28
    expr                           shift and go to state 29

state 16

    (16) stmt -> WHILE PARENTESIS . condition PARENTESIS block
    (20) condition -> . expr COMPARACION expr
    (21) expr -> . expr OPERACION expr
    (22) expr -> . PARENTESIS expr PARENTESIS
    (23) expr -> . ID
    (24) expr -> . NUMERO
    (25) expr -> . DESC

    PARENTESIS      shift and go to state 21
    ID              shift and go to state 19
    NUMERO          shift and go to state 22
    DESC            shift and go to state 23

    condition                      shift and go to state 30
    expr                           shift and go to state 29

state 17

    (6) stmt -> type ID PUNTOCOMA .

    ID              reduce using rule 6 (stmt -> type ID PUNTOCOMA .)
    PRINT           reduce using rule 6 (stmt -> type ID PUNTOCOMA .)
    IF              reduce using rule 6 (stmt -> type ID PUNTOCOMA .)
    WHILE           reduce using rule 6 (stmt -> type ID PUNTOCOMA .)
    INT             reduce using rule 6 (stmt -> type ID PUNTOCOMA .)
    FLOAT           reduce using rule 6 (stmt -> type ID PUNTOCOMA .)
    $end            reduce using rule 6 (stmt -> type ID PUNTOCOMA .)
    PARENTESIS      reduce using rule 6 (stmt -> type ID PUNTOCOMA .)


state 18

    (7) stmt -> type ID ASIGNACION . expr PUNTOCOMA
    (21) expr -> . expr OPERACION expr
    (22) expr -> . PARENTESIS expr PARENTESIS
    (23) expr -> . ID
    (24) expr -> . NUMERO
    (25) expr -> . DESC

    PARENTESIS      shift and go to state 21
    ID              shift and go to state 19
    NUMERO          shift and go to state 22
    DESC            shift and go to state 23

    expr                           shift and go to state 31

state 19

    (23) expr -> ID .

    PUNTOCOMA       reduce using rule 23 (expr -> ID .)
    OPERACION       reduce using rule 23 (expr -> ID .)
    COMA            reduce using rule 23 (expr -> ID .)
    PARENTESIS      reduce using rule 23 (expr -> ID .)
    COMPARACION     reduce using rule 23 (expr -> ID .)


state 20

    (8) stmt -> ID ASIGNACION expr . PUNTOCOMA
    (21) expr -> expr . OPERACION expr

    PUNTOCOMA       shift and go to state 32
    OPERACION       shift and go to state 33


state 21

    (22) expr -> PARENTESIS . expr PARENTESIS
    (21) expr -> . expr OPERACION expr
    (22) expr -> . PARENTESIS expr PARENTESIS
    (23) expr -> . ID
    (24) expr -> . NUMERO
    (25) expr -> . DESC

    PARENTESIS      shift and go to state 21
    ID              shift and go to state 19
    NUMERO          shift and go to state 22
    DESC            shift and go to state 23

    expr                           shift and go to state 34

state 22

    (24) expr -> NUMERO .

    PUNTOCOMA       reduce using rule 24 (expr -> NUMERO .)
    OPERACION       reduce using rule 24 (expr -> NUMERO .)
    COMA            reduce using rule 24 (expr -> NUMERO .)
    PARENTESIS      reduce using rule 24 (expr -> NUMERO .)
    COMPARACION     reduce using rule 24 (expr -> NUMERO .)


state 23

    (25) expr -> DESC .

    PUNTOCOMA       reduce using rule 25 (expr -> DESC .)
    OPERACION       reduce using rule 25 (expr -> DESC .)
    COMA            reduce using rule 25 (expr -> DESC .)
    PARENTESIS      reduce using rule 25 (expr -> DESC .)
    COMPARACION     reduce using rule 25 (expr -> DESC .)


state 24

    (9) stmt -> PRINT PARENTESIS args_opt . PARENTESIS PUNTOCOMA

    PARENTESIS      shift and go to state 35


state 25

    (10) args_opt -> args_list .
    (13) args_list -> args_list . COMA expr

    PARENTESIS      reduce using rule 10 (args_opt -> args_list .)
    COMA            shift and go to state 36


state 26

    (11) args_opt -> empty .

    PARENTESIS      reduce using rule 11 (args_opt -> empty .)


state 27

    (12) args_list -> expr .
    (21) expr -> expr . OPERACION expr

    COMA            reduce using rule 12 (args_list -> expr .)
    PARENTESIS      reduce using rule 12 (args_list -> expr .)
    OPERACION       shift and go to state 33


state 28

    (14) stmt -> IF PARENTESIS condition . PARENTESIS block
    (15) stmt -> IF PARENTESIS condition . PARENTESIS block ELSE block

    PARENTESIS      shift and go to state 37


state 29

    (20) condition -> expr . COMPARACION expr
    (21) expr -> expr . OPERACION expr

    COMPARACION     shift and go to state 38
    OPERACION       shift and go to state 33


state 30

    (16) stmt -> WHILE PARENTESIS condition . PARENTESIS block

    PARENTESIS      shift and go to state 39


state 31

    (7) stmt -> type ID ASIGNACION expr . PUNTOCOMA
    (21) expr -> expr . OPERACION expr

    PUNTOCOMA       shift and go to state 40
    OPERACION       shift and go to state 33


state 32

    (8) stmt -> ID ASIGNACION expr PUNTOCOMA .

    ID              reduce using rule 8 (stmt -> ID ASIGNACION expr PUNTOCOMA .)
    PRINT           reduce using rule 8 (stmt -> ID ASIGNACION expr PUNTOCOMA .)
    IF              reduce using rule 8 (stmt -> ID ASIGNACION expr PUNTOCOMA .)
    WHILE           reduce using rule 8 (stmt -> ID ASIGNACION expr PUNTOCOMA .)
    INT             reduce using rule 8 (stmt -> ID ASIGNACION expr PUNTOCOMA .)
    FLOAT           reduce using rule 8 (stmt -> ID ASIGNACION expr PUNTOCOMA .)
    $end            reduce using rule 8 (stmt -> ID ASIGNACION expr PUNTOCOMA .)
    PARENTESIS      reduce using rule 8 (stmt -> ID ASIGNACION expr PUNTOCOMA .)


state 33

    (21) expr -> expr OPERACION . expr
    (21) expr -> . expr OPERACION expr
    (22) expr -> . PARENTESIS expr PARENTESIS
    (23) expr -> . ID
    (24) expr -> . NUMERO
    (25) expr -> . DESC

    PARENTESIS      shift and go to state 21
    ID              shift and go to state 19
    NUMERO          shift and go to state 22
    DESC            shift and go to state 23

    expr                           shift and go to state 41

state 34

    (22) expr -> PARENTESIS expr . PARENTESIS
    (21) expr -> expr . OPERACION expr

    PARENTESIS      shift and go to state 42
    OPERACION       shift and go to state 33


state 35

    (9) stmt -> PRINT PARENTESIS args_opt PARENTESIS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 43


state 36

    (13) args_list -> args_list COMA . expr
    (21) expr -> . expr OPERACION expr
    (22) expr -> . PARENTESIS expr PARENTESIS
    (23) expr -> . ID
    (24) expr -> . NUMERO
    (25) expr -> . DESC

    PARENTESIS      shift and go to state 21
    ID              shift and go to state 19
    NUMERO          shift and go to state 22
    DESC            shift and go to state 23

    expr                           shift and go to state 44

state 37

    (14) stmt -> IF PARENTESIS condition PARENTESIS . block
    (15) stmt -> IF PARENTESIS condition PARENTESIS . block ELSE block
    (19) block -> . PARENTESIS stmts_opt PARENTESIS

    PARENTESIS      shift and go to state 45

    block                          shift and go to state 46

state 38

    (20) condition -> expr COMPARACION . expr
    (21) expr -> . expr OPERACION expr
    (22) expr -> . PARENTESIS expr PARENTESIS
    (23) expr -> . ID
    (24) expr -> . NUMERO
    (25) expr -> . DESC

    PARENTESIS      shift and go to state 21
    ID              shift and go to state 19
    NUMERO          shift and go to state 22
    DESC            shift and go to state 23

    expr                           shift and go to state 47

state 39

    (16) stmt -> WHILE PARENTESIS condition PARENTESIS . block
    (19) block -> . PARENTESIS stmts_opt PARENTESIS

    PARENTESIS      shift and go to state 45

    block                          shift and go to state 48

state 40

    (7) stmt -> type ID ASIGNACION expr PUNTOCOMA .

    ID              reduce using rule 7 (stmt -> type ID ASIGNACION expr PUNTOCOMA .)
    PRINT           reduce using rule 7 (stmt -> type ID ASIGNACION expr PUNTOCOMA .)
    IF              reduce using rule 7 (stmt -> type ID ASIGNACION expr PUNTOCOMA .)
    WHILE           reduce using rule 7 (stmt -> type ID ASIGNACION expr PUNTOCOMA .)
    INT             reduce using rule 7 (stmt -> type ID ASIGNACION expr PUNTOCOMA .)
    FLOAT           reduce using rule 7 (stmt -> type ID ASIGNACION expr PUNTOCOMA .)
    $end            reduce using rule 7 (stmt -> type ID ASIGNACION expr PUNTOCOMA .)
    PARENTESIS      reduce using rule 7 (stmt -> type ID ASIGNACION expr PUNTOCOMA .)


state 41

    (21) expr -> expr OPERACION expr .
    (21) expr -> expr . OPERACION expr

    PUNTOCOMA       reduce using rule 21 (expr -> expr OPERACION expr .)
    OPERACION       reduce using rule 21 (expr -> expr OPERACION expr .)
    COMA            reduce using rule 21 (expr -> expr OPERACION expr .)
    PARENTESIS      reduce using rule 21 (expr -> expr OPERACION expr .)
    COMPARACION     reduce using rule 21 (expr -> expr OPERACION expr .)

  ! OPERACION       [ shift and go to state 33 ]


state 42

    (22) expr -> PARENTESIS expr PARENTESIS .

    PUNTOCOMA       reduce using rule 22 (expr -> PARENTESIS expr PARENTESIS .)
    OPERACION       reduce using rule 22 (expr -> PARENTESIS expr PARENTESIS .)
    COMA            reduce using rule 22 (expr -> PARENTESIS expr PARENTESIS .)
    PARENTESIS      reduce using rule 22 (expr -> PARENTESIS expr PARENTESIS .)
    COMPARACION     reduce using rule 22 (expr -> PARENTESIS expr PARENTESIS .)


state 43

    (9) stmt -> PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA .

    ID              reduce using rule 9 (stmt -> PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA .)
    PRINT           reduce using rule 9 (stmt -> PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA .)
    IF              reduce using rule 9 (stmt -> PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA .)
    WHILE           reduce using rule 9 (stmt -> PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA .)
    INT             reduce using rule 9 (stmt -> PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA .)
    FLOAT           reduce using rule 9 (stmt -> PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA .)
    $end            reduce using rule 9 (stmt -> PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA .)
    PARENTESIS      reduce using rule 9 (stmt -> PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA .)


state 44

    (13) args_list -> args_list COMA expr .
    (21) expr -> expr . OPERACION expr

    COMA            reduce using rule 13 (args_list -> args_list COMA expr .)
    PARENTESIS      reduce using rule 13 (args_list -> args_list COMA expr .)
    OPERACION       shift and go to state 33


state 45

    (19) block -> PARENTESIS . stmts_opt PARENTESIS
    (2) stmts_opt -> . stmts
    (3) stmts_opt -> . empty
    (4) stmts -> . stmts stmt
    (5) stmts -> . stmt
    (26) empty -> .
    (6) stmt -> . type ID PUNTOCOMA
    (7) stmt -> . type ID ASIGNACION expr PUNTOCOMA
    (8) stmt -> . ID ASIGNACION expr PUNTOCOMA
    (9) stmt -> . PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA
    (14) stmt -> . IF PARENTESIS condition PARENTESIS block
    (15) stmt -> . IF PARENTESIS condition PARENTESIS block ELSE block
    (16) stmt -> . WHILE PARENTESIS condition PARENTESIS block
    (17) type -> . INT
    (18) type -> . FLOAT

    PARENTESIS      reduce using rule 26 (empty -> .)
    ID              shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10

    stmts_opt                      shift and go to state 49
    stmts                          shift and go to state 50
    empty                          shift and go to state 51
    stmt                           shift and go to state 3
    type                           shift and go to state 4

state 46

    (14) stmt -> IF PARENTESIS condition PARENTESIS block .
    (15) stmt -> IF PARENTESIS condition PARENTESIS block . ELSE block

    ID              reduce using rule 14 (stmt -> IF PARENTESIS condition PARENTESIS block .)
    PRINT           reduce using rule 14 (stmt -> IF PARENTESIS condition PARENTESIS block .)
    IF              reduce using rule 14 (stmt -> IF PARENTESIS condition PARENTESIS block .)
    WHILE           reduce using rule 14 (stmt -> IF PARENTESIS condition PARENTESIS block .)
    INT             reduce using rule 14 (stmt -> IF PARENTESIS condition PARENTESIS block .)
    FLOAT           reduce using rule 14 (stmt -> IF PARENTESIS condition PARENTESIS block .)
    $end            reduce using rule 14 (stmt -> IF PARENTESIS condition PARENTESIS block .)
    PARENTESIS      reduce using rule 14 (stmt -> IF PARENTESIS condition PARENTESIS block .)
    ELSE            shift and go to state 52


state 47

    (20) condition -> expr COMPARACION expr .
    (21) expr -> expr . OPERACION expr

    PARENTESIS      reduce using rule 20 (condition -> expr COMPARACION expr .)
    OPERACION       shift and go to state 33


state 48

    (16) stmt -> WHILE PARENTESIS condition PARENTESIS block .

    ID              reduce using rule 16 (stmt -> WHILE PARENTESIS condition PARENTESIS block .)
    PRINT           reduce using rule 16 (stmt -> WHILE PARENTESIS condition PARENTESIS block .)
    IF              reduce using rule 16 (stmt -> WHILE PARENTESIS condition PARENTESIS block .)
    WHILE           reduce using rule 16 (stmt -> WHILE PARENTESIS condition PARENTESIS block .)
    INT             reduce using rule 16 (stmt -> WHILE PARENTESIS condition PARENTESIS block .)
    FLOAT           reduce using rule 16 (stmt -> WHILE PARENTESIS condition PARENTESIS block .)
    $end            reduce using rule 16 (stmt -> WHILE PARENTESIS condition PARENTESIS block .)
    PARENTESIS      reduce using rule 16 (stmt -> WHILE PARENTESIS condition PARENTESIS block .)


state 49

    (19) block -> PARENTESIS stmts_opt . PARENTESIS

    PARENTESIS      shift and go to state 53


state 50

    (2) stmts_opt -> stmts .
    (4) stmts -> stmts . stmt
    (6) stmt -> . type ID PUNTOCOMA
    (7) stmt -> . type ID ASIGNACION expr PUNTOCOMA
    (8) stmt -> . ID ASIGNACION expr PUNTOCOMA
    (9) stmt -> . PRINT PARENTESIS args_opt PARENTESIS PUNTOCOMA
    (14) stmt -> . IF PARENTESIS condition PARENTESIS block
    (15) stmt -> . IF PARENTESIS condition PARENTESIS block ELSE block
    (16) stmt -> . WHILE PARENTESIS condition PARENTESIS block
    (17) type -> . INT
    (18) type -> . FLOAT

    PARENTESIS      reduce using rule 2 (stmts_opt -> stmts .)
    ID              shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10

    stmt                           shift and go to state 11
    type                           shift and go to state 4

state 51

    (3) stmts_opt -> empty .

    PARENTESIS      reduce using rule 3 (stmts_opt -> empty .)


state 52

    (15) stmt -> IF PARENTESIS condition PARENTESIS block ELSE . block
    (19) block -> . PARENTESIS stmts_opt PARENTESIS

    PARENTESIS      shift and go to state 45

    block                          shift and go to state 54

state 53

    (19) block -> PARENTESIS stmts_opt PARENTESIS .

    ELSE            reduce using rule 19 (block -> PARENTESIS stmts_opt PARENTESIS .)
    ID              reduce using rule 19 (block -> PARENTESIS stmts_opt PARENTESIS .)
    PRINT           reduce using rule 19 (block -> PARENTESIS stmts_opt PARENTESIS .)
    IF              reduce using rule 19 (block -> PARENTESIS stmts_opt PARENTESIS .)
    WHILE           reduce using rule 19 (block -> PARENTESIS stmts_opt PARENTESIS .)
    INT             reduce using rule 19 (block -> PARENTESIS stmts_opt PARENTESIS .)
    FLOAT           reduce using rule 19 (block -> PARENTESIS stmts_opt PARENTESIS .)
    $end            reduce using rule 19 (block -> PARENTESIS stmts_opt PARENTESIS .)
    PARENTESIS      reduce using rule 19 (block -> PARENTESIS stmts_opt PARENTESIS .)


state 54

    (15) stmt -> IF PARENTESIS condition PARENTESIS block ELSE block .

    ID              reduce using rule 15 (stmt -> IF PARENTESIS condition PARENTESIS block ELSE block .)
    PRINT           reduce using rule 15 (stmt -> IF PARENTESIS condition PARENTESIS block ELSE block .)
    IF              reduce using rule 15 (stmt -> IF PARENTESIS condition PARENTESIS block ELSE block .)
    WHILE           reduce using rule 15 (stmt -> IF PARENTESIS condition PARENTESIS block ELSE block .)
    INT             reduce using rule 15 (stmt -> IF PARENTESIS condition PARENTESIS block ELSE block .)
    FLOAT           reduce using rule 15 (stmt -> IF PARENTESIS condition PARENTESIS block ELSE block .)
    $end            reduce using rule 15 (stmt -> IF PARENTESIS condition PARENTESIS block ELSE block .)
    PARENTESIS      reduce using rule 15 (stmt -> IF PARENTESIS condition PARENTESIS block ELSE block .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for PARENTESIS in state 14 resolved as shift
